--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
     "paths": {
       "@mui/styled-engine": [
         "./node_modules/@mui/styled-engine-sc"
+      ],
+      "@types": [
+        "./src/types"
       ]
     }
   },
